--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 # ############################################# mybatis 配置文件 #######################################
-mybatis.config-location=classpath:mybatis-config.xml
+#mybatis.config-location=classpath:mybatis-config.xml
+
+# 不写 mybatis-config.xml 这个配置文件时可以用下面的配置
+mybatis.type-aliases-package=com.example.domain
+mybatis.mapper-locations=classpath:mybatis-mapper/*.xml
 # ############################################# mybatis 配置文件 #######################################
